2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs: Bumped version to 3.3.99.0.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj: Upped version to 3.3.99.0. Do
	  not use version from solution on library projects.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj: Bumped version to 3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj: Public beta release 3.2.99.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Console.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Console.csproj: Bump to version 3.2.0

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* DicConsole.cs: Refactor and code cleanup.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* DicConsole.cs:
	  Solved some bugs found testing on usb flash sticks.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Console.csproj:
	  Upgrade .NET version to 4.0.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DicConsole.cs:
	  Added methods without formatting.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* DicConsole.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Console.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.
