@@ -46,7 +46,7 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Claunia.com")]
 [assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("Copyright © 2011-2016 Natalia Portillo")]
+[assembly: AssemblyCopyright("Copyright © 2011-2017 Natalia Portillo")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
